--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	</head>
 	<body>
 		<script src="js/head-on.js"></script>
+		<script src="js/planets.js"></script>
 		<script src="js/game.js"></script>
 	</body>
 </html>
